--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -19,6 +19,33 @@ body {
   background: rgb(22, 22, 22);
 }
 
+.user-connect {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.user-connect input, .user-connect button {
+  padding: 0;
+  font-size: 2rem;
+  width: 100%;
+  max-width: 1000px;
+  border: 0;
+  height: 5rem;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 0;
+}
+
+.user-connect button {
+  background: coral;
+  color: #fff;
+  cursor: pointer;
+}
+
 .message-box {
   border: 0;
   /* border-top: 1px solid black; */
